--- a/chats.html
+++ b/chats.html
@@ -28,10 +28,10 @@
         </div>
         <div class="header__bottom">
             <div class="header__column">
-                <span class="header__text">Edit</span>
+                <span class="header__text">편집</span>
             </div>
             <div class="header__column">
-                <span class="header__text">Chats <i class="fa fa-caret-down"></i></span>
+                <span class="header__text">채팅 <i class="fa fa-caret-down"></i></span>
             </div>
             <div class="header__column"></div>
         </div>
@@ -39,7 +39,7 @@
     <main class="chats">
         <div class="search-bar">
             <i class="fa fa-search"></i>
-            <input type="text" placeholder="Find friends, chats, Plus Friends">
+            <input type="text" placeholder="친구를 찾거나 검색 해보세요.">
         </div>
         <ul class="chats__list">
             <li class="chats__chat">
@@ -47,8 +47,8 @@
                     <div class="chat__content">
                         <img src="images/avatar.jpg">
                         <div class="chat__preview">
-                            <h3 class="chat__user">Emma</h3>
-                            <span class="chat__last-message">Hello :)</span>
+                            <h3 class="chat__user">김빛나</h3>
+                            <span class="chat__last-message">안녕 :)</span>
                         </div>
                     </div>
                     <span class="chat__date-time">
@@ -61,8 +61,8 @@
                     <div class="chat__content">
                         <img src="images/avatar.jpg">
                         <div class="chat__preview">
-                            <h3 class="chat__user">KakaoTlak</h3>
-                            <span class="chat__last-message">You logged into KakaoTalk PC from the PC.</span>
+                            <h3 class="chat__user">이하나</h3>
+                            <span class="chat__last-message">뭐해 ?</span>
                         </div>
                     </div>
                     <span class="chat__date-time">
@@ -78,19 +78,19 @@
     <nav class="tab-bar">
         <a href="index.html" class="tab-bar__tab">
             <i class="fa fa-user"></i>
-            <span class="tab-bar__title">Friends</span>
+            <span class="tab-bar__title">친구</span>
         </a>
         <a href="chats.html" class="tab-bar__tab tab-bar__tab--selected">
             <i class="fa fa-comment"></i>
-            <span class="tab-bar__title">Chats</span>
+            <span class="tab-bar__title">채팅</span>
         </a>
         <a href="find.html" class="tab-bar__tab">
             <i class="fa fa-search"></i>
-            <span class="tab-bar__title">Find</span>
+            <span class="tab-bar__title">찾기</span>
         </a>
         <a href="more.html" class="tab-bar__tab">
             <i class="fa fa-ellipsis-h"></i>
-            <span class="tab-bar__title">More</span>
+            <span class="tab-bar__title">더보기</span>
         </a>
     </nav>
     <div class="bigScreenText">
